--- a/Section2_Assignment to upload.ipynb
+++ b/Section2_Assignment to upload.ipynb
@@ -48,7 +48,7 @@
           "height": 452
         },
         "id": "cPgjOFmgf4LD",
-        "outputId": "26c9dd45-3599-49f5-dafd-29299f3f8d69",
+        "outputId": "90e8e9b0-561c-4547-a768-fc6aeb7ca583",
         "vscode": {
           "languageId": "python"
         }
@@ -58,7 +58,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fc9d20e6c90>"
+              "<matplotlib.image.AxesImage at 0x7d1500edd280>"
             ]
           },
           "metadata": {},
@@ -154,7 +154,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0mUBYQ_N7nhf",
-        "outputId": "00044623-5e42-4f65-c162-20646b00a35f",
+        "outputId": "c8c37238-308c-49f1-d39c-58189281ebe9",
         "vscode": {
           "languageId": "python"
         }
@@ -255,7 +255,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 344
         },
-        "outputId": "d1b274e7-8b69-4bc8-ee38-1e8b885dda49"
+        "outputId": "a23c8069-105f-4159-90d2-b434dc6b231e"
       },
       "outputs": [
         {
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "unZHFzrYhWyg",
         "vscode": {
@@ -305,6 +305,31 @@
       "outputs": [],
       "source": [
         "#### Your Code Here ###\n",
+        "def _conv1d_axis(arr, k, axis):\n",
+        "    \"\"\"\n",
+        "    Convolve `arr` with 1-D kernel `k` along a given axis using reflect padding.\n",
+        "    Returns an array the same shape as `arr`.\n",
+        "    \"\"\"\n",
+        "    r = len(k) // 2\n",
+        "    pad_width = [(0, 0)] * arr.ndim\n",
+        "    pad_width[axis] = (r, r)\n",
+        "    padded = np.pad(arr, pad_width, mode='reflect')\n",
+        "    kf = k[::-1]  # flip for convolution (np.convolve is correlation by default if you don't flip)\n",
+        "\n",
+        "    def _conv_line(line):\n",
+        "        return np.convolve(line, kf, mode='valid')\n",
+        "\n",
+        "    return np.apply_along_axis(_conv_line, axis, padded)\n",
+        "\n",
+        "def _sep_conv(img, kx, ky):\n",
+        "    \"\"\"\n",
+        "    Separable 2-D convolution: first along x (axis=1) with kx, then along y (axis=0) with ky.\n",
+        "    \"\"\"\n",
+        "    tmp = _conv1d_axis(img, kx, axis=1)  # horizontal pass\n",
+        "    out = _conv1d_axis(tmp, ky, axis=0)  # vertical pass\n",
+        "    return out\n",
+        "\n",
+        "#######################\n",
         "def laplacian(sigma,image):\n",
         "    \"\"\"\n",
         "    sigma: Parameter controlling Gaussian blur\n",
@@ -318,12 +343,11 @@
         "    # Form Derivatives of Image with Gaussian (with sequential 1d convolution.)\n",
         "\n",
         "    #### Your Code Here ###\n",
+        "    # Need to work on this before final submission\n",
         "\n",
-        "    return conv_laplacian\n",
+        "    #######################\n",
         "\n",
-        "\n",
-        "\n",
-        "\n"
+        "    return conv_laplacian"
       ]
     },
     {
@@ -343,14 +367,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "craULlpysB0H",
         "vscode": {
           "languageId": "python"
+        },
+        "outputId": "c17c35e3-4907-4802-8397-5c75d7637553",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 309
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "  0%|          | 0/29 [00:00<?, ?it/s]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'conv_laplacian' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1447429373.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_scales\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# For each sigma in scale space\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m    \u001b[0;31m#Generate matrix components\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m    \u001b[0mconv_laplacian\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlaplacian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msigma_vals\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m    \u001b[0;31m# add to scale space\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m    \u001b[0mlaplace_scale_space\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlaplace_scale_space\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mconv_laplacian\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mptr\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mconv_laplacian\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-943641391.py\u001b[0m in \u001b[0;36mlaplacian\u001b[0;34m(sigma, image)\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0;31m#######################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mconv_laplacian\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'conv_laplacian' is not defined"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# Initialise sscale space as empty\n",
@@ -488,6 +537,8 @@
         "    # nearest neighbours for comparison.\n",
         "\n",
         "    #### Your Code Here ###\n",
+        "\n",
+        "    ########################\n",
         "\n",
         "    # Condition for max detection\n",
         "    if #### Your Code Here ###\n",
